--- a/java/web/test-resbeans.html
+++ b/java/web/test-resbeans.html
@@ -4,7 +4,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Тестировать веб-службы RESTful</title>
+        <title>Test RESTful Web Services</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="test-resbeans.css" type="text/css"/>
         <link rel="stylesheet" href="css_master-all.css" type="text/css"/>
@@ -28,7 +28,7 @@
                         <td class="seperator" style="vertical-align:top;"></td>
                         <td id="content" class="content" style="vertical-align:top;">
                             <div id="navigation" class="details"></div><hr/>
-                            <div id="request">Для тестирования выберите узел на панели переходов (в левой части этой страницы).</div><hr/>
+                            <div id="request">Select a node on the navigation bar (on the left side of this page) to test.</div><hr/>
                             <div id="testaction" class="ConMgn_sun4"></div>
                             <div id="testinput" class="ConMgn_sun4"></div>
                             <hr/>
