--- a/java/web/index.html
+++ b/java/web/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <div>Simple Image API</div>
+        <div>GET http://localhost:8080/api/images</div>
+        <div>GET http://localhost:8080/api/images/{id}</div>
+        <div>POST http://localhost:8080/api/images</div>
     </body>
 </html>
